[package]
name = "yolo-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28" # Или новее
egui = "0.28"
ort = { version = "2.0.0-rc.10" }
image = "0.25"
ndarray = "0.15"
anyhow = "1.0"
yolo-rs = "0.2.0"
arcstr = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Обязательно!
arboard = "3.4"
